--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 spring.application.name=mi-web-app
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# 1. ELIMINAMOS la l\u00ednea 'spring.autoconfigure.exclude' porque AHORA S\u00cd queremos que Spring configure la base de datos.
+
+# 2. URL de conexi\u00f3n (Cambiamos el puerto de 3306 a 3307 para entrar al Docker)
+spring.datasource.url=jdbc:mysql://localhost:3307/db_tickets_disanta?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+# 3. La contrase\u00f1a que pusiste en Docker Desktop
+spring.datasource.password=admin123
+
+# Driver y Hibernate
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 4. Estrategia de creaci\u00f3n de tablas (Hibernate crear\u00e1 la tabla 'usuario' por ti)
+spring.jpa.hibernate.ddl-auto=update
+
+# 5. Mostrar las consultas SQL en la consola de NetBeans para verificar que todo funciona
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
